atualizações e adição de sql

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,4 +6,5 @@ pages:
   - Excel: 'excel.md'
   - Mercado financeiro / CPA-20: 'mercado-financeiro.md'
   - Python: 'python.md'
-  - Análise de dados: 'analise.md'
+  - Dissertação: 'dissertacao.md'
+  - SQL: 'sql.md'
